--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,29 @@
     align-items: center;
     justify-content: center;
   }
+
+  #styling-section {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .column-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: flex-end;
+  }
+
+  .column-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  #ex-text {
+    font-family: "Chalkboard-Bold";
+  }
 </style>
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -53,7 +76,28 @@
       $("#loading").show();
       $("#content").hide();
     });
+    textChange();
+    colorChange();
+    pickedVideo();
   });
+
+  function textChange() {
+    $("#font").change(function () {
+      $("#ex-text").css("font-family", $(this).val());
+    });
+  }
+
+  function colorChange() {
+    $("#color").change(function () {
+      $("#ex-text").css("color", $(this).val());
+    });
+  }
+
+  function pickedVideo() {
+    $("#fileToUpload").change(function () {
+      $("#submit").attr("disabled", false);
+    });
+  }
 </script>
 <html>
   <head>
@@ -85,7 +129,35 @@
             class="form-control"
           />
         </div>
-        <button class="btn btn-primary" id="submit">Upload</button>
+        <hr />
+        <h4>Styling</h4>
+        <div id="styling-section">
+          <div class="column-1">
+            <label for="font">Pick a font:</label>
+            <select name="font" class="form-select" id="font">
+              <option selected value="Chalkboard-Bold">Chalkboard Bold</option>
+              {% for font in fonts %}
+              <option value="{{ font }}">{{ font | replace('-', ' ')}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="column-2">
+            <label for="color" class="form-label">Font Color</label>
+            <input
+              name="color"
+              type="color"
+              class="form-control form-control-color"
+              id="color"
+              title="Pick a Color"
+              value="#000000"
+            />
+          </div>
+        </div>
+        <div class="m-3">
+          <h5 id="ex-text">Example Text</h5>
+        </div>
+        <hr />
+        <button class="btn btn-primary" id="submit" disabled>Upload</button>
       </form>
       <hr />
       <div id="finished-vid">
